Added singleton pattern

--- a/ConsoleMain/ConsoleMain.csproj
+++ b/ConsoleMain/ConsoleMain.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <ProjectReference Include="..\FactoryMethodPattern\FactoryMethodPattern.csproj" />
     <ProjectReference Include="..\FactoryPattern\FactoryPattern.csproj" />
+    <ProjectReference Include="..\SingletonPattern\SingletonPattern.csproj" />
   </ItemGroup>
 
 </Project>
